Reorganiza menu e move relógios para o rodapé

--- a/index.html
+++ b/index.html
@@ -9,50 +9,18 @@
   <body>
     <header class="top">
       <div class="container">
-       <div class="brand">
-  <img src="logo-ga.png" alt="Logo GA" class="logo-img" />
-  <span>Gustavo Arsand</span>
-</div>
-
-        <nav class="nav">
-          <a href="#sobre">Sobre</a>
-          <a href="#projetos">Projetos</a>
-          <a href="#contato">Contato</a>
-        </nav>
+        <div class="brand">
+          <img src="logo-ga.png" alt="Logo GA" class="logo-img" />
+          <span>Gustavo Arsand</span>
+        </div>
       </div>
 
-
-   <div class="worldclock">
-  <div class="city">
-    <div class="city-name">New York</div>
-    <div class="city-time" id="time-ny">--:--</div>
-  </div>
-
-  <div class="city">
-    <div class="city-name">Sydney</div>
-    <div class="city-time" id="time-syd">--:--</div>
-  </div>
-
-  <div class="city">
-    <div class="city-name">São Paulo</div>
-    <div class="city-time" id="time-sp">--:--</div>
-  </div>
-
-  <div class="city">
-    <div class="city-name">London</div>
-    <div class="city-time" id="time-lon">--:--</div>
-  </div>
-
-  <div class="city">
-    <div class="city-name">Tokyo</div>
-    <div class="city-time" id="time-tok">--:--</div>
-  </div>
-</div>
-
-
-
-
-
+      <!-- NAV MOVIDO PARA O LUGAR ONDE ESTAVAM AS CIDADES -->
+      <nav class="nav">
+        <a href="#sobre">Sobre</a>
+        <a href="#projetos">Projetos</a>
+        <a href="#contato">Contato</a>
+      </nav>
     </header>
 
     <main>
@@ -140,6 +108,34 @@
         </div>
       </section>
     </main>
+
+    <!-- WORLD CLOCK MOVIDO PARA UMA BARRA NO FIM (ABAIXO) -->
+    <div class="worldclock bottom-clock">
+      <div class="city">
+        <div class="city-name">New York</div>
+        <div class="city-time" id="time-ny">--:--</div>
+      </div>
+
+      <div class="city">
+        <div class="city-name">Sydney</div>
+        <div class="city-time" id="time-syd">--:--</div>
+      </div>
+
+      <div class="city">
+        <div class="city-name">São Paulo</div>
+        <div class="city-time" id="time-sp">--:--</div>
+      </div>
+
+      <div class="city">
+        <div class="city-name">London</div>
+        <div class="city-time" id="time-lon">--:--</div>
+      </div>
+
+      <div class="city">
+        <div class="city-name">Tokyo</div>
+        <div class="city-time" id="time-tok">--:--</div>
+      </div>
+    </div>
 
     <footer class="footer">
       <div class="container">
