--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
   </head>
   <body>
     <header class="top">
-      <div class="container">
+      <div class="container top-row">
         <div class="brand">
           <img src="logo-ga.png" alt="Logo GA" class="logo-img" />
           <span>Gustavo Arsand</span>
         </div>
-      </div>
 
-      <!-- NAV MOVIDO PARA O LUGAR ONDE ESTAVAM AS CIDADES -->
-      <nav class="nav">
-        <a href="#sobre">Sobre</a>
-        <a href="#projetos">Projetos</a>
-        <a href="#contato">Contato</a>
-      </nav>
+        <nav class="nav" aria-label="Navegação principal">
+          <a href="#sobre">Sobre</a>
+          <a href="#projetos">Projetos</a>
+          <a href="#contato">Contato</a>
+        </nav>
+      </div>
     </header>
 
     <main>
@@ -109,31 +108,32 @@
       </section>
     </main>
 
-    <!-- WORLD CLOCK MOVIDO PARA UMA BARRA NO FIM (ABAIXO) -->
-    <div class="worldclock bottom-clock">
-      <div class="city">
-        <div class="city-name">New York</div>
-        <div class="city-time" id="time-ny">--:--</div>
-      </div>
+    <div class="worldclock bottom-clock" role="contentinfo" aria-label="Horários no mundo">
+      <div class="worldclock-inner">
+        <div class="city">
+          <div class="city-name">New York</div>
+          <div class="city-time" id="time-ny">--:--</div>
+        </div>
 
-      <div class="city">
-        <div class="city-name">Sydney</div>
-        <div class="city-time" id="time-syd">--:--</div>
-      </div>
+        <div class="city">
+          <div class="city-name">Sydney</div>
+          <div class="city-time" id="time-syd">--:--</div>
+        </div>
 
-      <div class="city">
-        <div class="city-name">São Paulo</div>
-        <div class="city-time" id="time-sp">--:--</div>
-      </div>
+        <div class="city">
+          <div class="city-name">São Paulo</div>
+          <div class="city-time" id="time-sp">--:--</div>
+        </div>
 
-      <div class="city">
-        <div class="city-name">London</div>
-        <div class="city-time" id="time-lon">--:--</div>
-      </div>
+        <div class="city">
+          <div class="city-name">London</div>
+          <div class="city-time" id="time-lon">--:--</div>
+        </div>
 
-      <div class="city">
-        <div class="city-name">Tokyo</div>
-        <div class="city-time" id="time-tok">--:--</div>
+        <div class="city">
+          <div class="city-name">Tokyo</div>
+          <div class="city-time" id="time-tok">--:--</div>
+        </div>
       </div>
     </div>
 
