Improve nav styling

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
           <span>Gustavo Arsand</span>
         </div>
 
-        <nav class="nav" aria-label="Navegação principal">
-          <a href="#sobre">Sobre</a>
-          <a href="#projetos">Projetos</a>
-          <a href="#contato">Contato</a>
-        </nav>
+      <nav class="nav nav-icons" aria-label="Navegação principal">
+  <a class="nav-item" href="#sobre"><span class="nav-ico">👤</span><span>Sobre</span></a>
+  <a class="nav-item" href="#projetos"><span class="nav-ico">🗂️</span><span>Projetos</span></a>
+  <a class="nav-item" href="#contato"><span class="nav-ico">✉️</span><span>Contato</span></a>
+</nav>
+
       </div>
     </header>
 
