--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gustavo — Site pessoal</title>
-    <link rel="stylesheet" href="style.css?v=2" />
+    <link rel="stylesheet" href="style.css?v=3" />
 
   </head>
   <body>
@@ -15,10 +15,19 @@
           <span>Gustavo Arsand</span>
         </div>
 
-      <nav class="nav nav-icons" aria-label="Navegação principal">
-  <a class="nav-item" href="#sobre"><span class="nav-ico">👤</span><span>Sobre</span></a>
-  <a class="nav-item" href="#projetos"><span class="nav-ico">🗂️</span><span>Projetos</span></a>
-  <a class="nav-item" href="#contato"><span class="nav-ico">✉️</span><span>Contato</span></a>
+ <nav class="nav nav-icons" aria-label="Navegação principal">
+  <a href="#sobre" class="nav-item">
+    <span class="nav-icon">👤</span>
+    <span class="nav-label">Sobre</span>
+  </a>
+  <a href="#projetos" class="nav-item">
+    <span class="nav-icon">📁</span>
+    <span class="nav-label">Projetos</span>
+  </a>
+  <a href="#contato" class="nav-item">
+    <span class="nav-icon">✉️</span>
+    <span class="nav-label">Contato</span>
+  </a>
 </nav>
 
       </div>
