Add LinkedIn link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="avatar" aria-hidden="true">GA</div>
             <h2 class="card-title">Resumo rápido</h2>
             <ul class="list">
-              <li>📍 Porto Alegre / Holanda</li>
+              <li>📍 Porto Alegre, Brasil </li>
               <li>💼 Business Partner / Analytics</li>
               <li>🎯 Foco: performance, métricas e clareza</li>
               <li>🎵 Música: energia pra eventos</li>
@@ -109,9 +109,9 @@
           <p>Coloque seus links aqui:</p>
 
           <div class="contact">
-            <a class="btn" href="mailto:seuemail@exemplo.com">Email</a>
-            <a class="btn ghost" href="#" target="_blank" rel="noreferrer">LinkedIn</a>
-            <a class="btn ghost" href="#" target="_blank" rel="noreferrer">Instagram</a>
+            <a class="btn" href="mailto:gustavoarsand@gmail.com">Email</a>
+            <a class="btn ghost" href="https://www.linkedin.com/in/gustavo-arsand/" target="_blank" rel="noreferrer">LinkedIn</a>
+            <a class="btn ghost" href="https://w.app/ouwayx" target="_blank" rel="noreferrer">WhatsApp</a>
           </div>
 
           <p class="footnote" id="status"></p>
@@ -150,7 +150,7 @@
 
     <footer class="footer">
       <div class="container">
-        <small>© <span id="ano"></span> Gustavo. Feito por você.</small>
+        <small>© <span id="ano"></span> Gustavo Arsand</small>
       </div>
     </footer>
 
